Updated page TechDraw LandmarkDimension/fr

--- a/wiki/fr/TechDraw_LandmarkDimension.html
+++ b/wiki/fr/TechDraw_LandmarkDimension.html
@@ -54,7 +54,7 @@ Il convient d'utiliser &agrave; la place l'outil Cote standard.</div>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Ins&eacute;rer une cote &agrave; partir des points du rep&egrave;re</b> ajoute une cote lin&eacute;aire &agrave; une vue. La cote est bas&eacute;e sur deux objets points (objets <a href="../fr/Draft_Point.html" title="Draft Point/fr">Draft Point</a>, <a href="../fr/Part_Point.html" title="Part Point/fr">Part Point</a> ou <a href="../fr/PartDesign_Point.html" title="PartDesign Point/fr">PartDesign Point</a>) du mod&egrave;le 3D.
+<p>L'outil <b>TechDraw Cote &agrave; partir des points du rep&egrave;re</b> ajoute une cote lin&eacute;aire &agrave; une vue. La cote est bas&eacute;e sur deux objets points (objets <a href="../fr/Draft_Point.html" title="Draft Point/fr">Draft Point</a>, <a href="../fr/Part_Point.html" title="Part Point/fr">Part Point</a> ou <a href="../fr/PartDesign_Point.html" title="PartDesign Point/fr">PartDesign Point</a>) du mod&egrave;le 3D.
 </p><p>Le but de cet outil est de fournir une solution de contournement &agrave; la corruption des cotes provoqu&eacute;e par des probl&egrave;mes de &laquo;&nbsp;<a href="../fr/Topological_naming_problem.html" title="Topological naming problem/fr">d&eacute;nomination topologique</a>&nbsp;&raquo;. Les points sources doivent utiliser des <a href="../fr/Expressions.html" title="Expressions/fr">Expressions</a> ou d'autres m&eacute;canismes contenant pour &eacute;tablir leur position. &Eacute;tant donn&eacute; que les points sont des <a href="../fr/App_DocumentObject.html" title="App DocumentObject/fr">Objets Document</a> et non des composants de forme, leur nom ne change pas avec les recalculs et donc ils sont faciles &agrave; trouver.
 </p><p>Voir <a href="../fr/TechDraw_LengthDimension.html#Propri.C3.A9t.C3.A9s" title="TechDraw LengthDimension/fr">TechDraw Cote de longueur</a> pour en savoir plus sur les dimensions et les noms topologiques.
 </p><p><span id="Usage"></span>
@@ -146,12 +146,12 @@ Il convient d'utiliser &agrave; la place l'outil Cote standard.</div>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125135414
+Cached time: 20260125135431
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.147 seconds
+CPU time usage: 0.077 seconds
+Real time usage: 0.113 seconds
 Preprocessor visited node count: 367/1000000
 Post&#8208;expand include size: 23913/2097152 bytes
 Template argument size: 9956/2097152 bytes
@@ -162,19 +162,19 @@ Unstrip post&#8208;expand size: 3316/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.702      1 -total
- 25.35%    8.545      1 Template:TechDraw_Tools_navi/fr
- 18.36%    6.187      2 Template:Navigation_menu_2
- 13.18%    4.441      1 Template:Userdocnavi/fr
- 12.88%    4.341      1 Template:GuiCommand/fr
- 12.82%    4.319      2 Template:Docnav/fr
-  8.60%    2.898      1 Template:Button
-  8.16%    2.750      1 Template:Code
-  7.49%    2.524      1 Template:VeryImportantMessage
-  6.91%    2.328      1 Template:MenuCommand
+100.00%   25.641      1 -total
+ 35.12%    9.005      1 Template:TechDraw_Tools_navi/fr
+ 21.41%    5.489      2 Template:Navigation_menu_2
+ 16.39%    4.202      1 Template:Userdocnavi/fr
+ 12.15%    3.116      1 Template:GuiCommand/fr
+  9.32%    2.390      2 Template:Docnav/fr
+  7.84%    2.011      1 Template:Code
+  6.31%    1.617      1 Template:MenuCommand
+  5.28%    1.355      1 Template:Button
+  4.86%    1.245      1 Template:VeryImportantMessage
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:188624-0!canonical and timestamp 20260125135413 and revision id 1743993. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:188624-0!canonical and timestamp 20260125135431 and revision id 1743995. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
