Updated page TechDraw LandmarkDimension/fr

--- a/wiki/fr/TechDraw_LandmarkDimension.html
+++ b/wiki/fr/TechDraw_LandmarkDimension.html
@@ -60,16 +60,14 @@ Il convient d'utiliser &agrave; la place l'outil Cote standard.</div>
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>S&eacute;lectionnez deux objets ponctuels dans la <a href="../fr/3D_view.html" class="mw-redirect" title="3D view/fr">vue 3D</a> ou la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li>
-<li>Ajoutez la bonne vue TechDraw &agrave; la s&eacute;lection en la s&eacute;lectionnant dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li>
+<ol><li>S&eacute;lectionnez deux objets ponctuels dans la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a> ou l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
+<li>Ajoutez la bonne vue TechDraw &agrave; la s&eacute;lection en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_LandmarkDimension.svg&amp;filetimestamp=20241126213916&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LandmarkDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer une cote &agrave; partir des points du rep&egrave;re - EXP&Eacute;RIMENTAL</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Dimensions &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_LandmarkDimension.svg&amp;filetimestamp=20241126213916&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LandmarkDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une cote &agrave; partir des points du rep&egrave;re - EXP&Eacute;RIMENTAL</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_LandmarkDimension.svg&amp;filetimestamp=20241126213916&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LandmarkDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une cote &agrave; partir des points du rep&egrave;re - EXP&Eacute;RIMENTAL</b> du menu.</li></ul></li>
 <li>Une cote est ajout&eacute;e &agrave; la vue.</li>
 <li>La cote peut &ecirc;tre d&eacute;plac&eacute;e jusqu'&agrave; la position souhait&eacute;e.</li>
 <li>Si n&eacute;cessaire, ajoutez des tol&eacute;rances comme d&eacute;crit sur <a href="../fr/TechDraw_Geometric_dimensioning_and_tolerancing.html#Tol%C3%A9rances" title="TechDraw Geometric dimensioning and tolerancing/fr">cette page</a>.</li></ol>
-</div>
 <p><span id="Change_properties"></span>
 </p>
 <h3><span id="Changer_les_propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Changer_les_propri&eacute;t&eacute;s">Changer les propri&eacute;t&eacute;s</span></h3>
@@ -146,15 +144,15 @@ Il convient d'utiliser &agrave; la place l'outil Cote standard.</div>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125135431
+Cached time: 20260125135515
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
+CPU time usage: 0.081 seconds
 Real time usage: 0.113 seconds
-Preprocessor visited node count: 367/1000000
-Post&#8208;expand include size: 23913/2097152 bytes
-Template argument size: 9956/2097152 bytes
+Preprocessor visited node count: 366/1000000
+Post&#8208;expand include size: 23908/2097152 bytes
+Template argument size: 9951/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -162,19 +160,19 @@ Unstrip post&#8208;expand size: 3316/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.641      1 -total
- 35.12%    9.005      1 Template:TechDraw_Tools_navi/fr
- 21.41%    5.489      2 Template:Navigation_menu_2
- 16.39%    4.202      1 Template:Userdocnavi/fr
- 12.15%    3.116      1 Template:GuiCommand/fr
-  9.32%    2.390      2 Template:Docnav/fr
-  7.84%    2.011      1 Template:Code
-  6.31%    1.617      1 Template:MenuCommand
-  5.28%    1.355      1 Template:Button
-  4.86%    1.245      1 Template:VeryImportantMessage
+100.00%   26.417      1 -total
+ 28.41%    7.505      1 Template:TechDraw_Tools_navi/fr
+ 23.70%    6.262      2 Template:Navigation_menu_2
+ 17.09%    4.515      1 Template:Userdocnavi/fr
+ 12.31%    3.252      1 Template:GuiCommand/fr
+ 10.72%    2.833      2 Template:Docnav/fr
+  9.29%    2.453      1 Template:Code
+  6.89%    1.821      1 Template:VeryImportantMessage
+  6.43%    1.698      1 Template:Button
+  5.63%    1.486      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:188624-0!canonical and timestamp 20260125135431 and revision id 1743995. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:188624-0!canonical and timestamp 20260125135515 and revision id 1743997. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
