--- a/wiki/fr/TechDraw_LandmarkDimension.html
+++ b/wiki/fr/TechDraw_LandmarkDimension.html
@@ -2,7 +2,7 @@
 <li><a href="../de/TechDraw_LandmarkDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Ma&szlig;&Uuml;berOrientierungspunkte (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_LandmarkDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw LandmarkDimension (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/TechDraw_LandmarkDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw LandmarkDimension (73% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_LandmarkDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Quota da punti di riferimento (77% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_LandmarkDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw wymiar przestrzenny (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_LandmarkDimension.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1042;&#1089;&#1090;&#1072;&#1074;&#1080;&#1090;&#1100; &#1088;&#1072;&#1079;&#1084;&#1077;&#1088; &#1079;&#1085;&#1072;&#1082;&#1072;" (32% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -71,10 +71,8 @@ Il convient d'utiliser &agrave; la place l'outil Cote standard.</div>
 <p><span id="Change_properties"></span>
 </p>
 <h3><span id="Changer_les_propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Changer_les_propri&eacute;t&eacute;s">Changer les propri&eacute;t&eacute;s</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Pour modifier les propri&eacute;t&eacute;s d'un objet dimension, double-cliquez dessus dans le dessin ou dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>. Cela ouvrira la <a href="../fr/TechDraw_LengthDimension.html#Fen%C3%AAtre_de_dialogue_Cote" title="TechDraw LengthDimension/fr">fen&ecirc;tre de dialogue Cote</a>.
+<p>Pour modifier les propri&eacute;t&eacute;s d'un objet dimension, double-cliquez dessus dans le dessin ou dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Cela ouvrira le <a href="../fr/TechDraw_LengthDimension.html#Panneau_des_t%C3%A2ches_de_Cote" title="TechDraw LengthDimension/fr">panneau des t&acirc;ches de Cote</a>.
 </p>
-</div>
 <h2><span class="mw-headline" id="Limitations">Limitations</span></h2>
 <p>L'outil Ins&eacute;rer une cote &agrave; partir des points du rep&egrave;re est initialement limit&eacute; aux cotes &laquo;&nbsp;Distance&nbsp;&raquo;. D'autres types peuvent &ecirc;tre ajout&eacute;s si la demande le justifie.
 </p><p><span id="Notes"></span>
@@ -144,35 +142,35 @@ Il convient d'utiliser &agrave; la place l'outil Cote standard.</div>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125135515
+Cached time: 20260125135625
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.113 seconds
-Preprocessor visited node count: 366/1000000
+CPU time usage: 0.076 seconds
+Real time usage: 0.110 seconds
+Preprocessor visited node count: 365/1000000
 Post&#8208;expand include size: 23908/2097152 bytes
 Template argument size: 9951/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3316/5000000 bytes
+Unstrip post&#8208;expand size: 3320/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.417      1 -total
- 28.41%    7.505      1 Template:TechDraw_Tools_navi/fr
- 23.70%    6.262      2 Template:Navigation_menu_2
- 17.09%    4.515      1 Template:Userdocnavi/fr
- 12.31%    3.252      1 Template:GuiCommand/fr
- 10.72%    2.833      2 Template:Docnav/fr
-  9.29%    2.453      1 Template:Code
-  6.89%    1.821      1 Template:VeryImportantMessage
-  6.43%    1.698      1 Template:Button
-  5.63%    1.486      1 Template:MenuCommand
+100.00%   26.569      1 -total
+ 23.49%    6.240      1 Template:TechDraw_Tools_navi/fr
+ 20.71%    5.504      2 Template:Navigation_menu_2
+ 18.94%    5.031      1 Template:Userdocnavi/fr
+ 12.61%    3.350      1 Template:GuiCommand/fr
+ 11.86%    3.151      1 Template:Code
+  9.12%    2.423      2 Template:Docnav/fr
+  9.02%    2.397      1 Template:MenuCommand
+  6.36%    1.690      1 Template:Button
+  5.84%    1.552      1 Template:VeryImportantMessage
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:188624-0!canonical and timestamp 20260125135515 and revision id 1743997. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:188624-0!canonical and timestamp 20260125135625 and revision id 1743999. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
