--- a/wiki/fr/TechDraw_LandmarkDimension.html
+++ b/wiki/fr/TechDraw_LandmarkDimension.html
@@ -74,7 +74,7 @@ Il convient d'utiliser &agrave; la place l'outil Cote standard.</div>
 <p>Pour modifier les propri&eacute;t&eacute;s d'un objet dimension, double-cliquez dessus dans le dessin ou dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Cela ouvrira le <a href="../fr/TechDraw_LengthDimension.html#Panneau_des_t%C3%A2ches_de_Cote" title="TechDraw LengthDimension/fr">panneau des t&acirc;ches de Cote</a>.
 </p>
 <h2><span class="mw-headline" id="Limitations">Limitations</span></h2>
-<p>L'outil Ins&eacute;rer une cote &agrave; partir des points du rep&egrave;re est initialement limit&eacute; aux cotes &laquo;&nbsp;Distance&nbsp;&raquo;. D'autres types peuvent &ecirc;tre ajout&eacute;s si la demande le justifie.
+<p>L'outil Cote &agrave; partir des points du rep&egrave;re est initialement limit&eacute; aux cotes &laquo;&nbsp;Distance&nbsp;&raquo;. D'autres types peuvent &ecirc;tre ajout&eacute;s si la demande le justifie.
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -142,12 +142,12 @@ Il convient d'utiliser &agrave; la place l'outil Cote standard.</div>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125135625
+Cached time: 20260125135637
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.110 seconds
+CPU time usage: 0.075 seconds
+Real time usage: 0.118 seconds
 Preprocessor visited node count: 365/1000000
 Post&#8208;expand include size: 23908/2097152 bytes
 Template argument size: 9951/2097152 bytes
@@ -158,19 +158,19 @@ Unstrip post&#8208;expand size: 3320/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.569      1 -total
- 23.49%    6.240      1 Template:TechDraw_Tools_navi/fr
- 20.71%    5.504      2 Template:Navigation_menu_2
- 18.94%    5.031      1 Template:Userdocnavi/fr
- 12.61%    3.350      1 Template:GuiCommand/fr
- 11.86%    3.151      1 Template:Code
-  9.12%    2.423      2 Template:Docnav/fr
-  9.02%    2.397      1 Template:MenuCommand
-  6.36%    1.690      1 Template:Button
-  5.84%    1.552      1 Template:VeryImportantMessage
+100.00%   27.147      1 -total
+ 24.64%    6.688      1 Template:TechDraw_Tools_navi/fr
+ 19.69%    5.344      2 Template:Navigation_menu_2
+ 16.66%    4.524      1 Template:Userdocnavi/fr
+ 15.32%    4.158      2 Template:Docnav/fr
+ 12.61%    3.422      1 Template:GuiCommand/fr
+  9.38%    2.546      1 Template:VeryImportantMessage
+  7.90%    2.144      1 Template:Code
+  6.08%    1.651      1 Template:MenuCommand
+  4.70%    1.276      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:188624-0!canonical and timestamp 20260125135625 and revision id 1743999. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:188624-0!canonical and timestamp 20260125135637 and revision id 1744001. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
