--- a/wiki/fr/TechDraw_LeaderLine.html
+++ b/wiki/fr/TechDraw_LeaderLine.html
@@ -153,14 +153,12 @@
 </pre></div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Annotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Annotation.html" title="TechDraw Annotation/fr">Annotation</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_RichTextAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/fr">Annotation texte enrichi</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_AxoLengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_AxoLengthDimension.html" title="TechDraw AxoLengthDimension/fr">Cote axonom&eacute;trique</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/fr">Ligne centrale &agrave; une face</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -200,15 +198,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125135950
+Cached time: 20260125140005
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.123 seconds
-Real time usage: 0.186 seconds
-Preprocessor visited node count: 1107/1000000
-Post&#8208;expand include size: 34842/2097152 bytes
-Template argument size: 11457/2097152 bytes
+CPU time usage: 0.124 seconds
+Real time usage: 0.193 seconds
+Preprocessor visited node count: 1106/1000000
+Post&#8208;expand include size: 34899/2097152 bytes
+Template argument size: 11495/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -216,19 +214,19 @@ Unstrip post&#8208;expand size: 3885/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.641      1 -total
- 21.69%   13.587     10 Template:PropertyData
- 17.75%   11.118     15 Template:Variable
- 14.35%    8.990      1 Template:TechDraw_Tools_navi/fr
-  9.45%    5.919      2 Template:Navigation_menu_2
-  8.39%    5.257      1 Template:Userdocnavi/fr
-  6.29%    3.939      5 Template:PropertyView
-  5.36%    3.357      1 Template:Version/fr
-  5.31%    3.326      1 Template:Code
-  5.24%    3.283      1 Template:GuiCommand/fr
+100.00%   54.578      1 -total
+ 16.92%    9.232      1 Template:TechDraw_Tools_navi/fr
+ 16.69%    9.111     10 Template:PropertyData
+ 16.38%    8.940     15 Template:Variable
+ 12.67%    6.913      2 Template:Navigation_menu_2
+ 10.92%    5.959      1 Template:Userdocnavi/fr
+  7.67%    4.185      5 Template:PropertyView
+  6.48%    3.538      1 Template:GuiCommand/fr
+  5.74%    3.131      1 Template:Version/fr
+  5.56%    3.036      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149164-0!canonical and timestamp 20260125135949 and revision id 1744006. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149164-0!canonical and timestamp 20260125140005 and revision id 1744008. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
