--- a/wiki/fr/TechDraw_LeaderLine.html
+++ b/wiki/fr/TechDraw_LeaderLine.html
@@ -13,7 +13,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Ins&eacute;rer une ligne de rep&egrave;re
+<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Ligne de rep&egrave;re
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Ligne de rep&egrave;re</b> ajoute une ligne &agrave; une vue. D'autres objets d'annotation (tels que une <a href="../fr/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/fr">annotation par texte enrichi</a>) peuvent &ecirc;tre connect&eacute;s &agrave; une ligne de rep&egrave;re pour former des annotations complexes. 
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine_sample.png&amp;filetimestamp=20190506003028&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine_sample.png" decoding="async" width="367" height="205" class="mw-file-element" data-file-width="367" data-file-height="205"></a></span>
@@ -198,15 +196,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125140005
+Cached time: 20260125140147
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.124 seconds
-Real time usage: 0.193 seconds
-Preprocessor visited node count: 1106/1000000
-Post&#8208;expand include size: 34899/2097152 bytes
-Template argument size: 11495/2097152 bytes
+CPU time usage: 0.146 seconds
+Real time usage: 0.210 seconds
+Preprocessor visited node count: 1105/1000000
+Post&#8208;expand include size: 34873/2097152 bytes
+Template argument size: 11469/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -214,19 +212,19 @@ Unstrip post&#8208;expand size: 3885/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.578      1 -total
- 16.92%    9.232      1 Template:TechDraw_Tools_navi/fr
- 16.69%    9.111     10 Template:PropertyData
- 16.38%    8.940     15 Template:Variable
- 12.67%    6.913      2 Template:Navigation_menu_2
- 10.92%    5.959      1 Template:Userdocnavi/fr
-  7.67%    4.185      5 Template:PropertyView
-  6.48%    3.538      1 Template:GuiCommand/fr
-  5.74%    3.131      1 Template:Version/fr
-  5.56%    3.036      2 Template:Docnav/fr
+100.00%   65.482      1 -total
+ 23.23%   15.210      1 Template:TechDraw_Tools_navi/fr
+ 16.73%   10.953     10 Template:PropertyData
+ 15.10%    9.889     15 Template:Variable
+ 12.45%    8.154      2 Template:Navigation_menu_2
+  7.78%    5.094      1 Template:Userdocnavi/fr
+  6.70%    4.387      5 Template:PropertyView
+  5.75%    3.764      1 Template:Code
+  5.31%    3.476      2 Template:TitleProperty
+  4.91%    3.218      1 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149164-0!canonical and timestamp 20260125140005 and revision id 1744008. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149164-0!canonical and timestamp 20260125140146 and revision id 1744010. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
