Updated page TechDraw LeaderLine/fr

--- a/wiki/fr/TechDraw_LeaderLine.html
+++ b/wiki/fr/TechDraw_LeaderLine.html
@@ -60,11 +60,10 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une vue.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer une ligne de rep&egrave;re</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une ligne de rep&egrave;re</b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ligne de rep&egrave;re</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ligne de rep&egrave;re</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Choisir des points</span>.</li>
 <li>Choisissez le premier point de la feuille pour d&eacute;finir le point de d&eacute;part de la ligne.</li>
@@ -73,7 +72,6 @@
 <li>Si vous n'avez pas double-cliqu&eacute; sur un point&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Enregistrer les points</span>.</li>
 <li>Vous pouvez modifier le <b>Symbole de d&eacute;but</b>, le <b>Symbole de fin</b>, la <b>Couleur</b>, la <b>Largeur</b> et le <b>Style</b> de la ligne de rep&egrave;re. Voir <a href="#Propri%C3%A9t%C3%A9s">Propri&eacute;t&eacute;s</a> pour plus d'informations.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-</div>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id=".C3.89dition"></span><span class="mw-headline" id="&Eacute;dition">&Eacute;dition</span></h2>
@@ -196,15 +194,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125140147
+Cached time: 20260125140231
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.146 seconds
-Real time usage: 0.210 seconds
-Preprocessor visited node count: 1105/1000000
-Post&#8208;expand include size: 34873/2097152 bytes
-Template argument size: 11469/2097152 bytes
+CPU time usage: 0.123 seconds
+Real time usage: 0.216 seconds
+Preprocessor visited node count: 1104/1000000
+Post&#8208;expand include size: 34847/2097152 bytes
+Template argument size: 11443/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -212,19 +210,19 @@ Unstrip post&#8208;expand size: 3885/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   65.482      1 -total
- 23.23%   15.210      1 Template:TechDraw_Tools_navi/fr
- 16.73%   10.953     10 Template:PropertyData
- 15.10%    9.889     15 Template:Variable
- 12.45%    8.154      2 Template:Navigation_menu_2
-  7.78%    5.094      1 Template:Userdocnavi/fr
-  6.70%    4.387      5 Template:PropertyView
-  5.75%    3.764      1 Template:Code
-  5.31%    3.476      2 Template:TitleProperty
-  4.91%    3.218      1 Template:Version/fr
+100.00%   59.888      1 -total
+ 22.65%   13.567     15 Template:Variable
+ 22.33%   13.372     10 Template:PropertyData
+ 14.03%    8.400      1 Template:TechDraw_Tools_navi/fr
+ 11.58%    6.935      2 Template:Navigation_menu_2
+ 11.03%    6.606     13 Template:Incode
+  7.49%    4.483      1 Template:GuiCommand/fr
+  7.36%    4.406      1 Template:Userdocnavi/fr
+  7.21%    4.316      5 Template:PropertyView
+  5.18%    3.105      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149164-0!canonical and timestamp 20260125140146 and revision id 1744010. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149164-0!canonical and timestamp 20260125140231 and revision id 1744012. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
