--- a/wiki/fr/TechDraw_LeaderLine.html
+++ b/wiki/fr/TechDraw_LeaderLine.html
@@ -75,8 +75,7 @@
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id=".C3.89dition"></span><span class="mw-headline" id="&Eacute;dition">&Eacute;dition</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Double-cliquez sur une ligne de rep&egrave;re dans l'arborescence.</li>
+<ol><li>Double-cliquez sur une ligne de rep&egrave;re dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Un panneau de t&acirc;ches s'ouvre.</li>
 <li>Pour modifier les points&nbsp;:
 <ol><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Modifier les points</span>.</li>
@@ -85,7 +84,6 @@
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Enregistrer les modifications</span>.</li></ol></li>
 <li>Vous pouvez modifier le <b>Symbole de d&eacute;but</b>, le <b>Symbole de fin</b>, la <b>Couleur</b>, la <b>Largeur</b> et le <b>Style</b> du rep&egrave;re. Voir <a href="#Propri%C3%A9t%C3%A9s">Propri&eacute;t&eacute;s</a> pour plus d'informations.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -194,12 +192,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125140231
+Cached time: 20260125140257
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.123 seconds
-Real time usage: 0.216 seconds
+CPU time usage: 0.131 seconds
+Real time usage: 0.220 seconds
 Preprocessor visited node count: 1104/1000000
 Post&#8208;expand include size: 34847/2097152 bytes
 Template argument size: 11443/2097152 bytes
@@ -210,19 +208,19 @@ Unstrip post&#8208;expand size: 3885/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.888      1 -total
- 22.65%   13.567     15 Template:Variable
- 22.33%   13.372     10 Template:PropertyData
- 14.03%    8.400      1 Template:TechDraw_Tools_navi/fr
- 11.58%    6.935      2 Template:Navigation_menu_2
- 11.03%    6.606     13 Template:Incode
-  7.49%    4.483      1 Template:GuiCommand/fr
-  7.36%    4.406      1 Template:Userdocnavi/fr
-  7.21%    4.316      5 Template:PropertyView
-  5.18%    3.105      2 Template:Docnav/fr
+100.00%   73.885      1 -total
+ 31.79%   23.485      1 Template:TechDraw_Tools_navi/fr
+ 15.05%   11.122      1 Template:Userdocnavi/fr
+ 13.20%    9.752     10 Template:PropertyData
+ 12.28%    9.072      2 Template:Navigation_menu_2
+ 11.38%    8.409     15 Template:Variable
+  4.76%    3.515      1 Template:GuiCommand/fr
+  4.25%    3.139      5 Template:PropertyView
+  4.24%    3.136      1 Template:Code
+  3.89%    2.875      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149164-0!canonical and timestamp 20260125140231 and revision id 1744012. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149164-0!canonical and timestamp 20260125140256 and revision id 1744014. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
