--- a/wiki/fr/TechDraw_LeaderLine.html
+++ b/wiki/fr/TechDraw_LeaderLine.html
@@ -87,12 +87,10 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li>Il n'est pas possible d'ajouter ou de supprimer des points d'une ligne de rep&egrave;re existante.</li>
 <li>Si aucun point n'a &eacute;t&eacute; sp&eacute;cifi&eacute; lors de la cr&eacute;ation, une courte ligne est plac&eacute;e au centre de la vue. Il n'y a aucun moyen de fixer une telle ligne, elle doit &ecirc;tre supprim&eacute;e.</li>
 <li>Par d&eacute;faut, <b>Ligne de rep&egrave;re horizontale automatique</b> des <a href="../fr/TechDraw_Preferences.html#Annotation" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rences</a> est coch&eacute;e. Cela signifie que le dernier segment de ligne des nouvelles lignes de guidage est dessin&eacute; horizontalement. S'il n'y a qu'un seul segment, le r&eacute;sultat est une simple ligne horizontale.</li>
 <li>Vous pouvez d&eacute;sactiver cette fonction d'horizontalit&eacute; automatique pour les lignes de rep&egrave;re existantes en modifiant la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Auto Horizontal</b>.</li></ul>
-</div>
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
@@ -192,13 +190,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125140257
+Cached time: 20260125140314
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.131 seconds
-Real time usage: 0.220 seconds
-Preprocessor visited node count: 1104/1000000
+CPU time usage: 0.133 seconds
+Real time usage: 0.199 seconds
+Preprocessor visited node count: 1103/1000000
 Post&#8208;expand include size: 34847/2097152 bytes
 Template argument size: 11443/2097152 bytes
 Highest expansion depth: 7/100
@@ -208,19 +206,19 @@ Unstrip post&#8208;expand size: 3885/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   73.885      1 -total
- 31.79%   23.485      1 Template:TechDraw_Tools_navi/fr
- 15.05%   11.122      1 Template:Userdocnavi/fr
- 13.20%    9.752     10 Template:PropertyData
- 12.28%    9.072      2 Template:Navigation_menu_2
- 11.38%    8.409     15 Template:Variable
-  4.76%    3.515      1 Template:GuiCommand/fr
-  4.25%    3.139      5 Template:PropertyView
-  4.24%    3.136      1 Template:Code
-  3.89%    2.875      2 Template:Docnav/fr
+100.00%   60.145      1 -total
+ 25.74%   15.480      1 Template:TechDraw_Tools_navi/fr
+ 21.80%   13.114      2 Template:Navigation_menu_2
+ 13.32%    8.010     10 Template:PropertyData
+ 12.00%    7.215     15 Template:Variable
+  7.97%    4.792      1 Template:Userdocnavi/fr
+  7.04%    4.232      1 Template:GuiCommand/fr
+  5.13%    3.085      5 Template:PropertyView
+  5.11%    3.071      1 Template:Version/fr
+  4.76%    2.866      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149164-0!canonical and timestamp 20260125140256 and revision id 1744014. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149164-0!canonical and timestamp 20260125140314 and revision id 1744016. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
