--- a/wiki/fr/TechDraw_LeaderLine.html
+++ b/wiki/fr/TechDraw_LeaderLine.html
@@ -99,12 +99,10 @@
 <h3><span id="Donn.C3.A9es"></span><span class="mw-headline" id="Donn&eacute;es">Donn&eacute;es</span></h3>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Base</span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Start Symbol</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>&nbsp;: symbole au d&eacute;but de la ligne de rep&egrave;re. Options&nbsp;: <span typeof="mw:File"><a href="../index.php?title=Arrowfilled.svg&amp;filetimestamp=20240522200625&amp;.html" class="mw-file-description"><img src="../File/Arrowfilled.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Fl&egrave;che remplie, <span typeof="mw:File"><a href="../index.php?title=Arrowopen.svg&amp;filetimestamp=20240522200725&amp;.html" class="mw-file-description"><img src="../File/Arrowopen.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Fl&egrave;che ouverte, <span typeof="mw:File"><a href="../index.php?title=Arrowtick.svg&amp;filetimestamp=20240522200817&amp;.html" class="mw-file-description"><img src="../File/Arrowtick.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Coche, <span typeof="mw:File"><a href="../index.php?title=Arrowdot.svg&amp;filetimestamp=20240522200553&amp;.html" class="mw-file-description"><img src="../File/Arrowdot.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Point, <span typeof="mw:File"><a href="../index.php?title=Arrowopendot.svg&amp;filetimestamp=20240522200736&amp;.html" class="mw-file-description"><img src="../File/Arrowopendot.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cercle ouvert, <span typeof="mw:File"><a href="../index.php?title=Arrowfork.svg&amp;filetimestamp=20240522200637&amp;.html" class="mw-file-description"><img src="../File/Arrowfork.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Fourche, <span typeof="mw:File"><a href="../index.php?title=Arrowpyramid.svg&amp;filetimestamp=20240522200753&amp;.html" class="mw-file-description"><img src="../File/Arrowpyramid.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Triangle rempli, Rien.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>End Symbol</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>&nbsp;: symbole &agrave; la fin de la ligne de rep&egrave;re. Idem.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>X</b><span style="font-size:80%;"> (<code>Distance</code>)</span>&nbsp;: coordonn&eacute;e X de la ligne de rep&egrave;re par rapport &agrave; la vue.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Y</b><span style="font-size:80%;"> (<code>Distance</code>)</span>&nbsp;: coordonn&eacute;e Y de la ligne de rep&egrave;re par rapport &agrave; la vue.</li></ul>
-</div>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Leader</span>
 </p>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Leader Parent</b><span style="font-size:80%;"> (<code>Link</code>)</span>&nbsp;: vue &agrave; laquelle la ligne de rep&egrave;re est attach&eacute;e.</li>
@@ -190,13 +188,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125140314
+Cached time: 20260125140329
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.133 seconds
-Real time usage: 0.199 seconds
-Preprocessor visited node count: 1103/1000000
+CPU time usage: 0.106 seconds
+Real time usage: 0.138 seconds
+Preprocessor visited node count: 1102/1000000
 Post&#8208;expand include size: 34847/2097152 bytes
 Template argument size: 11443/2097152 bytes
 Highest expansion depth: 7/100
@@ -206,19 +204,19 @@ Unstrip post&#8208;expand size: 3885/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   60.145      1 -total
- 25.74%   15.480      1 Template:TechDraw_Tools_navi/fr
- 21.80%   13.114      2 Template:Navigation_menu_2
- 13.32%    8.010     10 Template:PropertyData
- 12.00%    7.215     15 Template:Variable
-  7.97%    4.792      1 Template:Userdocnavi/fr
-  7.04%    4.232      1 Template:GuiCommand/fr
-  5.13%    3.085      5 Template:PropertyView
-  5.11%    3.071      1 Template:Version/fr
-  4.76%    2.866      2 Template:Docnav/fr
+100.00%   38.675      1 -total
+ 19.00%    7.349      1 Template:TechDraw_Tools_navi/fr
+ 18.63%    7.207     10 Template:PropertyData
+ 17.53%    6.781     15 Template:Variable
+ 14.53%    5.621      2 Template:Navigation_menu_2
+ 10.08%    3.899      1 Template:Userdocnavi/fr
+  8.36%    3.233      2 Template:Docnav/fr
+  7.65%    2.958      5 Template:PropertyView
+  6.30%    2.435      1 Template:GuiCommand/fr
+  4.38%    1.695     13 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149164-0!canonical and timestamp 20260125140314 and revision id 1744016. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149164-0!canonical and timestamp 20260125140329 and revision id 1744018. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
