--- a/wiki/fr/TechDraw_FaceCenterLine.html
+++ b/wiki/fr/TechDraw_FaceCenterLine.html
@@ -23,7 +23,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Ligne centrale &agrave; des faces
+<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Ligne centrale &agrave; une/des face(s)
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -62,8 +62,8 @@
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
 <ol><li>S&eacute;lectionnez une ou plusieurs faces dans une vue.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ajouter une ligne centrale &agrave; une face</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter une ligne centrale &agrave; une face</b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ligne centrale &agrave; une/des face(s)</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ligne centrale &agrave; une/des face(s)</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre. Voir <a href="#Options">Options</a> pour plus d'informations.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> pour confirmer.</li>
 <li>Une ligne centrale est ajout&eacute;e au milieu de la bo&icirc;te de d&eacute;limitation de la ou des face(s) s&eacute;lectionn&eacute;e(s).</li></ol>
@@ -146,15 +146,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125140538
+Cached time: 20260125140736
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.104 seconds
-Real time usage: 0.156 seconds
+CPU time usage: 0.079 seconds
+Real time usage: 0.113 seconds
 Preprocessor visited node count: 469/1000000
-Post&#8208;expand include size: 27412/2097152 bytes
-Template argument size: 10488/2097152 bytes
+Post&#8208;expand include size: 27414/2097152 bytes
+Template argument size: 10490/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -162,19 +162,19 @@ Unstrip post&#8208;expand size: 1665/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.664      1 -total
- 26.99%    9.625      1 Template:TechDraw_Tools_navi/fr
- 18.56%    6.619      2 Template:Navigation_menu_2
- 15.55%    5.547      2 Template:PropertyView
- 14.54%    5.185      1 Template:Userdocnavi/fr
-  8.12%    2.896      2 Template:Docnav/fr
-  7.94%    2.830      1 Template:GuiCommand/fr
-  7.08%    2.526      2 Template:Variable
-  6.12%    2.181      1 Template:Version/fr
-  4.83%    1.721      1 Template:Caption
+100.00%   26.366      1 -total
+ 26.48%    6.982      1 Template:TechDraw_Tools_navi/fr
+ 18.96%    4.999      2 Template:Navigation_menu_2
+ 14.46%    3.811      2 Template:PropertyView
+ 11.83%    3.118      2 Template:Docnav/fr
+  9.72%    2.563      1 Template:Userdocnavi/fr
+  8.55%    2.255      1 Template:GuiCommand/fr
+  6.61%    1.742      1 Template:MenuCommand
+  6.39%    1.684      2 Template:Variable
+  5.46%    1.440      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260125140537 and revision id 1744024. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260125140736 and revision id 1744028. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
