Created page with "* Używanie wymiarów [[Sketcher_ConstrainDistanceX/pl|poziomych]] i [[Sketcher_ConstrainDistanceY/pl|pionowych]] zamiast wiązań równości może zapobiec [[Sketcher_Workbench/pl#Flipping|zjawiskowi flippingu]]. Punkty związane przez te wymiary zmienią miejsce tylko jeśli znak ich wartości ulegnie zmianie. Aby utrzymać wymiary jako równe, mogą one zostać powiązane ze sobą za pomocą wyrażenia lub do tej samej wartości w [[Std_VarSet/pl|zestawie zmiennych]]..."

--- a/wiki/pl/Sketcher_ConstrainEqual.html
+++ b/wiki/pl/Sketcher_ConstrainEqual.html
@@ -4,7 +4,7 @@
 <li><a href="../es/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Croquizador RestringirIgual (12% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Contrainte d'&eacute;galit&eacute; (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher: Vincolo uguale (88% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Constraint EqualLength (0% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--med" title="Restri&ccedil;&atilde;o de igualdade (19% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Constr&icirc;ngere de egalitate (12% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -98,7 +98,7 @@
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Uwagi">Uwagi</span></h2>
-<ul><li>Using <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizontal</a> and <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> instead of equal constraints can prevent <a href="../Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">flipping</a>. Points constrained by these dimensions will only switch places if the sign of their value is changed. To keep the dimensions equal the constraints can be linked to each other with an expression, or to the same value in a <a href="../Std_VarSet.html" title="Std VarSet">VarSet</a> or <a href="../Spreadsheet_CreateSheet.html" title="Spreadsheet CreateSheet">spreadsheet</a>.</li></ul>
+<ul><li>U&#380;ywanie wymiar&oacute;w <a href="../pl/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/pl">poziomych</a> i <a href="../pl/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/pl">pionowych</a> zamiast wi&#261;za&#324; r&oacute;wno&#347;ci mo&#380;e zapobiec <a href="../pl/Sketcher_Workbench.html#Flipping" title="Sketcher Workbench/pl">zjawiskowi flippingu</a>. Punkty zwi&#261;zane przez te wymiary zmieni&#261; miejsce tylko je&#347;li znak ich warto&#347;ci ulegnie zmianie. Aby utrzyma&#263; wymiary jako r&oacute;wne, mog&#261; one zosta&#263; powi&#261;zane ze sob&#261; za pomoc&#261; wyra&#380;enia lub do tej samej warto&#347;ci w <a href="../pl/Std_VarSet.html" title="Std VarSet/pl">zestawie zmiennych</a> lub <a href="../pl/Spreadsheet_CreateSheet.html" title="Spreadsheet CreateSheet/pl">arkuszu kalkulacyjnym</a>.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -144,35 +144,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125140518
+Cached time: 20260125140804
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.102 seconds
-Real time usage: 0.232 seconds
+CPU time usage: 0.108 seconds
+Real time usage: 0.174 seconds
 Preprocessor visited node count: 342/1000000
 Post&#8208;expand include size: 26649/2097152 bytes
 Template argument size: 10820/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3448/5000000 bytes
+Unstrip post&#8208;expand size: 3452/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.041      1 -total
- 23.52%   11.066      1 Template:Sketcher_Tools_navi/pl
- 17.61%    8.285      1 Template:GuiCommand/pl
- 13.72%    6.456      2 Template:Navigation_menu_2
- 11.80%    5.552      2 Template:Docnav/pl
- 11.35%    5.339      1 Template:Userdocnavi/pl
-  9.46%    4.448      1 Template:Code
-  6.30%    2.962      2 Template:Incode
-  6.15%    2.891      3 Template:KEY
-  5.98%    2.815      2 Template:Version/pl
+100.00%   32.895      1 -total
+ 25.56%    8.408      1 Template:Sketcher_Tools_navi/pl
+ 15.87%    5.222      1 Template:GuiCommand/pl
+ 13.53%    4.449      1 Template:Userdocnavi/pl
+ 12.49%    4.108      2 Template:Navigation_menu_2
+ 10.62%    3.494      2 Template:Docnav/pl
+ 10.41%    3.424      2 Template:Version/pl
+  5.83%    1.916      1 Template:Code
+  5.57%    1.833      2 Template:Incode
+  4.66%    1.531      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:33938-0!canonical and timestamp 20260125140518 and revision id 1744022. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:33938-0!canonical and timestamp 20260125140803 and revision id 1744030. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
