Updated page Sketcher Workbench/pl

--- a/wiki/pl/Sketcher_Workbench.html
+++ b/wiki/pl/Sketcher_Workbench.html
@@ -376,12 +376,8 @@ Niekt&oacute;re z nich wymagaj&#261; u&#380;ycia <a href="../pl/Sketcher_helper_
 </p>
 <h4><span id="U.C5.BCywaj_wymiar.C3.B3w_poziomych_i_pionowych"></span><span class="mw-headline" id="U&#380;ywaj_wymiar&oacute;w_poziomych_i_pionowych">U&#380;ywaj wymiar&oacute;w poziomych i pionowych</span></h4>
 <p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_HorVer_Dimensions.png&amp;filetimestamp=20250805174627&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_HorVer_Dimensions.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
-</p>
-<div class="mw-translate-fuzzy">
-<p>Stosowanie <a href="../pl/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/pl">wymiar&oacute;w poziomych</a> i <a href="../pl/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/pl">pionowych</a> zamiast <a href="../pl/Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual/pl">wi&#261;za&#324; r&oacute;wno&#347;ci</a> mo&#380;e zapobiec odwracaniu. Punkty zwi&#261;zane takimi wymiarami nie zamieni&#261; si&#281; miejscami. Na powy&#380;szym obrazku dodane (pomara&#324;czowe) wi&#261;zania wymiarowe s&#261; powi&#261;zane z oryginalnymi wymiarami za pomoc&#261; <a href="../pl/Expressions.html" title="Expressions/pl">wyra&#380;e&#324;</a>.
-</p>
-</div>
-<p><span id="Use_angle_dimensions"></span>
+</p><p>Stosowanie <a href="../pl/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/pl">wymiar&oacute;w poziomych</a> i <a href="../pl/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/pl">pionowych</a> zamiast <a href="../pl/Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance/pl">wymiar&oacute;w odleg&#322;o&#347;ci</a> lub <a href="../pl/Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual/pl">wi&#261;za&#324; r&oacute;wno&#347;ci</a> mo&#380;e zapobiec odwracaniu. Punkty zwi&#261;zane takimi wymiarami zmieni&#261; miejsca tylko je&#347;li znak ich warto&#347;ci ulegnie zmianie. Na powy&#380;szym obrazku dodane (pomara&#324;czowe) wi&#261;zania wymiarowe s&#261; powi&#261;zane z oryginalnymi wymiarami za pomoc&#261; <a href="../pl/Expressions.html" title="Expressions/pl">wyra&#380;e&#324;</a>.
+</p><p><span id="Use_angle_dimensions"></span>
 </p>
 <h4><span id="U.C5.BCywaj_wymiar.C3.B3w_k.C4.85towych"></span><span class="mw-headline" id="U&#380;ywaj_wymiar&oacute;w_k&#261;towych">U&#380;ywaj wymiar&oacute;w k&#261;towych</span></h4>
 <p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Angular_Dimensions.png&amp;filetimestamp=20250805174512&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Angular_Dimensions.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
@@ -447,13 +443,13 @@ Niekt&oacute;re z nich wymagaj&#261; u&#380;ycia <a href="../pl/Sketcher_helper_
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125102717
+Cached time: 20260125140919
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.464 seconds
-Real time usage: 0.608 seconds
-Preprocessor visited node count: 1140/1000000
+CPU time usage: 0.411 seconds
+Real time usage: 0.599 seconds
+Preprocessor visited node count: 1139/1000000
 Post&#8208;expand include size: 36318/2097152 bytes
 Template argument size: 10386/2097152 bytes
 Highest expansion depth: 7/100
@@ -463,19 +459,19 @@ Unstrip post&#8208;expand size: 4769/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.043      1 -total
- 16.45%    4.941      1 Template:Sketcher_Tools_navi/pl
- 10.58%    3.178      1 Template:PropertyView
-  9.16%    2.753      2 Template:Docnav/pl
-  9.14%    2.747     34 Template:Version/pl
-  8.80%    2.645      2 Template:Navigation_menu_2
-  7.34%    2.206      1 Template:Userdocnavi/pl
-  7.15%    2.148      8 Template:VersionPlus/pl
-  6.66%    2.002      6 Template:Caption
-  5.65%    1.698     14 Template:KEY
+100.00%   57.064      1 -total
+ 16.58%    9.459      1 Template:Sketcher_Tools_navi/pl
+ 12.94%    7.386     14 Template:KEY
+ 12.34%    7.041      8 Template:VersionPlus/pl
+ 10.28%    5.866      2 Template:Navigation_menu_2
+  9.51%    5.429     34 Template:Version/pl
+  9.18%    5.239      1 Template:PropertyView
+  7.20%    4.111      6 Template:Caption
+  5.03%    2.868      2 Template:Docnav/pl
+  4.92%    2.807      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2385-0!canonical and timestamp 20260125102716 and revision id 1743633. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2385-0!canonical and timestamp 20260125140918 and revision id 1744034. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
