Updated page Installing on Linux/pl

--- a/wiki/pl/Installing_on_Linux.html
+++ b/wiki/pl/Installing_on_Linux.html
@@ -7,7 +7,7 @@
 <li><a href="../fr/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Installation sous Linux (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/hr (0% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Installare in Linux (91% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/pt (0% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Instalando no Linux (82% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/ro (0% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -134,10 +134,8 @@
 </pre></div>
 <div class="mw-collapsible mw-collapsed toccolours">
 <h2><span class="mw-headline" id="OpenSUSE">OpenSUSE</span></h2>
-<div class="mw-translate-fuzzy">
-<p>FreeCAD jest zazwyczaj instalowany z YAST <i>(skr&oacute;t od "Jeszcze jedno narz&#281;dzie konfiguracyjne")</i>, narz&#281;dzia do instalacji i konfiguracji systemu operacyjnego Linux, lub te&#380; za pomoc&#261; dowolnego terminala <i>(wymagane s&#261; prawa administratora)</i>:
+<p>FreeCAD mo&#380;na zainstalowa&#263; za pomoc&#261; Myrlyn (kt&oacute;ry zast&#261;pi&#322; YAST we wrze&#347;niu 2025) lub w dowolnym terminalu/konsoli (wymagane prawa administratora) poprzez:
 </p>
-</div>
 <dl><dd><div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">zypper</span> <span class="n">install</span> <span class="n">FreeCAD</span>
 </pre></div></dd></dl>
 <p><i>Uwaga:</i> Ta procedura obejmuje tylko instalacj&#281; oficjalnie wydanych <b>stabilnych'</b> wersji programu FreeCAD, w zale&#380;no&#347;ci od zainstalowanych link&oacute;w do repozytori&oacute;w pakiet&oacute;w programu w Twojej wersji systemu operacyjnego. Pakiet openSUSE mo&#380;e by&#263; przestarza&#322;y, poniewa&#380; jego pakiety mog&#261; by&#263; op&oacute;&#378;nione w stosunku do najnowszego stabilnego kodu &#378;r&oacute;d&#322;owego. W takim przypadku sugeruje si&#281; r&#281;czn&#261; instalacj&#281; pakietu z poni&#380;ej wskazanych (<i>Rozwi&#324;</i>) repozytori&oacute;w &#378;r&oacute;d&#322;owych.
@@ -244,35 +242,35 @@ z repozytori&oacute;w Githuba. Dzia&#322;aj&#261; one na wi&#281;kszo&#347;ci x8
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125103650
+Cached time: 20260125141104
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.149 seconds
-Preprocessor visited node count: 572/1000000
+CPU time usage: 0.109 seconds
+Real time usage: 0.332 seconds
+Preprocessor visited node count: 571/1000000
 Post&#8208;expand include size: 10230/2097152 bytes
 Template argument size: 3920/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 18/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 12824/5000000 bytes
+Unstrip post&#8208;expand size: 12828/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.832      1 -total
- 27.08%    8.077     18 Template:Code
- 13.96%    4.165      1 Template:Userdocnavi/pl
- 10.51%    3.136      2 Template:Docnav/pl
-  8.94%    2.667      1 Template:TOCright
-  6.51%    1.942      3 Template:MenuCommand
-  6.05%    1.806      1 Template:Navigation_menu_2
-  5.83%    1.739      7 Template:Emphasis
-  5.62%    1.676     15 Template:Incode
-  5.21%    1.554      1 Template:KEY
+100.00%   70.559      1 -total
+ 30.40%   21.452     18 Template:Code
+ 13.76%    9.709      1 Template:Userdocnavi/pl
+ 10.49%    7.400      3 Template:MenuCommand
+ 10.05%    7.093      2 Template:Docnav/pl
+  8.91%    6.284      1 Template:TOCright
+  6.94%    4.898     15 Template:Incode
+  5.88%    4.146      1 Template:Navigation_menu_2
+  5.25%    3.707      7 Template:Emphasis
+  4.56%    3.214      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:200169-0!canonical and timestamp 20260125103649 and revision id 1743679. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:200169-0!canonical and timestamp 20260125141104 and revision id 1744036. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
